test_app/src/snapshots/test_app__tests__inflection_tests__declension_1.snap
---
source: test_app/src/main.rs
expression: html

---
<div class="pls-inflection-root">
  <header class="pls-inflection-header">
    <summary class="pls-inflection-summary">vassūpanāyikā &ndash; "ā fem" (like vanitā)</summary>
  </header>
<table class="pls-inflection-table pls-inflection-type-conjugation">
  <thead>
    <tr>
      <td><span class="pls-inflection-table-title">ā_fem</span></td>
      <td colspan="2"><span class="pls-inflection-col-header">masculine</span></td>
      <td colspan="2"><span class="pls-inflection-col-header">feminine</span></td>
      <td colspan="2"><span class="pls-inflection-col-header">neuter</span></td>
    </tr>
    <tr>
      <td><span class="pls-inflection-row-header">case</span></td>
      <td><span class="pls-inflection-col-header">sg</span></td>
      <td><span class="pls-inflection-col-header">pl</span></td>
      <td><span class="pls-inflection-col-header">sg</span></td>
      <td><span class="pls-inflection-col-header">pl</span></td>
      <td><span class="pls-inflection-col-header">sg</span></td>
      <td><span class="pls-inflection-col-header">pl</span></td>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        <p><span class="pls-inflection-row-header">nom</span></p>
      </td>
      <td>
        </td>
      <td>
        </td>
      <td>
        <div class="pls-inflection-inflected-word">vassūpanāyikā</div>
        </td>
      <td>
        <div class="pls-inflection-inflected-word">vassūpanāyikā</div>
        <div class="pls-inflection-inflected-word">vassūpanāyikāyo</div>
        </td>
      <td>
        </td>
      <td>
        </td>
    </tr>
    <tr>
      <td>
        <p><span class="pls-inflection-row-header">acc</span></p>
      </td>
      <td>
        </td>
      <td>
        </td>
      <td>
        <div class="pls-inflection-inflected-word">vassūpanāyikaṃ</div>
        </td>
      <td>
        <div class="pls-inflection-inflected-word">vassūpanāyikā</div>
        <div class="pls-inflection-inflected-word">vassūpanāyikāyo</div>
        </td>
      <td>
        </td>
      <td>
        </td>
    </tr>
    <tr>
      <td>
        <p><span class="pls-inflection-row-header">instr</span></p>
      </td>
      <td>
        </td>
      <td>
        </td>
      <td>
        <div class="pls-inflection-inflected-word">vassūpanāyikāya</div>
        </td>
      <td>
        <div class="pls-inflection-inflected-word">vassūpanāyikāhi</div>
        <div class="pls-inflection-inflected-word">vassūpanāyikābhi</div>
        </td>
      <td>
        </td>
      <td>
        </td>
    </tr>
    <tr>
      <td>
        <p><span class="pls-inflection-row-header">dat</span></p>
      </td>
      <td>
        </td>
      <td>
        </td>
      <td>
        <div class="pls-inflection-inflected-word">vassūpanāyikāya</div>
        </td>
      <td>
        <div class="pls-inflection-inflected-word">vassūpanāyikānaṃ</div>
        </td>
      <td>
        </td>
      <td>
        </td>
    </tr>
    <tr>
      <td>
        <p><span class="pls-inflection-row-header">abl</span></p>
      </td>
      <td>
        </td>
      <td>
        </td>
      <td>
        <div class="pls-inflection-inflected-word">vassūpanāyikāya</div>
        <div class="pls-inflection-inflected-word">vassūpanāyikato</div>
        </td>
      <td>
        <div class="pls-inflection-inflected-word">vassūpanāyikāhi</div>
        <div class="pls-inflection-inflected-word">vassūpanāyikābhi</div>
        <div class="pls-inflection-inflected-word">vassūpanāyikato</div>
        </td>
      <td>
        </td>
      <td>
        </td>
    </tr>
    <tr>
      <td>
        <p><span class="pls-inflection-row-header">gen</span></p>
      </td>
      <td>
        </td>
      <td>
        </td>
      <td>
        <div class="pls-inflection-inflected-word">vassūpanāyikāya</div>
        </td>
      <td>
        <div class="pls-inflection-inflected-word">vassūpanāyikānaṃ</div>
        </td>
      <td>
        </td>
      <td>
        </td>
    </tr>
    <tr>
      <td>
        <p><span class="pls-inflection-row-header">loc</span></p>
      </td>
      <td>
        </td>
      <td>
        </td>
      <td>
        <div class="pls-inflection-inflected-word">vassūpanāyikāya</div>
        <div class="pls-inflection-inflected-word">vassūpanāyikāyaṃ</div>
        </td>
      <td>
        <div class="pls-inflection-inflected-word">vassūpanāyikāsu</div>
        </td>
      <td>
        </td>
      <td>
        </td>
    </tr>
    <tr>
      <td>
        <p><span class="pls-inflection-row-header">voc</span></p>
      </td>
      <td>
        </td>
      <td>
        </td>
      <td>
        <div class="pls-inflection-inflected-word">vassūpanāyike</div>
        </td>
      <td>
        <div class="pls-inflection-inflected-word">vassūpanāyikā</div>
        <div class="pls-inflection-inflected-word">vassūpanāyikāyo</div>
        </td>
      <td>
        </td>
      <td>
        </td>
    </tr>
    <tr>
      <td><span class="pls-inflection-row-header">in comps</span></td>
      <td colspan="6">
        <div class="pls-inflection-inflected-word">vassūpanāyika</div>
        <div class="pls-inflection-inflected-word">vassūpanāyikā</div>
        </td>
    </tr>
  </tbody>
</table>

  <footer class="pls-inflection-footer">
    <a class="pls-inflection-feedback-link" target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSeoxZiqvIWadaLeuXF4f44NCqEn49-B8KNbSvNer5jxgRYdtQ/viewform?entry.267696921=test case&entry.1433863141=v0.1">
      spot a mistake? something missing? fix it here!
    </a>
  </footer>
</div>

