test_app/src/snapshots/test_app__tests__inflection_tests__declension_4_pron_1st.snap
---
source: test_app/src/main.rs
expression: html

---
<div class="pls-inflection-root">
  <header class="pls-inflection-header"><summary class="pls-inflection-summary">maṃ &ndash; "ahaṃ pron 1st" (like )</summary></header>
<table class="pls-inflection-table pls-inflection-type-conjugation">
  <thead>
    <tr>
      <td><span class="pls-inflection-table-title">ahaṃ_pron_1st</span></td>
      <td><span class="pls-inflection-col-header">1st sg</span></td>
      <td><span class="pls-inflection-col-header">1st pl</span></td>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        <p><span class="pls-inflection-row-header">nom</span></p>
      </td>
      <td>
        <div class="pls-inflection-inflected-word"><span class="pls-inflection-inflected-word-suffix">ahaṃ</span></div>
        </td>
      <td>
        <div class="pls-inflection-inflected-word"><span class="pls-inflection-inflected-word-suffix">amhe</span></div>
        <div class="pls-inflection-inflected-word"><span class="pls-inflection-inflected-word-suffix">mayaṃ</span></div>
        </td>
    </tr>
    <tr>
      <td>
        <p><span class="pls-inflection-row-header">acc</span></p>
      </td>
      <td>
        <div class="pls-inflection-inflected-word"><span class="pls-inflection-inflected-word-suffix">mamaṃ</span></div>
        <div class="pls-inflection-inflected-word"><span class="pls-inflection-inflected-word-suffix">maṃ</span></div>
        <div class="pls-inflection-inflected-word"><span class="pls-inflection-inflected-word-suffix">me</span></div>
        </td>
      <td>
        <div class="pls-inflection-inflected-word"><span class="pls-inflection-inflected-word-suffix">amhākaṃ</span></div>
        <div class="pls-inflection-inflected-word"><span class="pls-inflection-inflected-word-suffix">amhe</span></div>
        <div class="pls-inflection-inflected-word"><span class="pls-inflection-inflected-word-suffix">no</span></div>
        </td>
    </tr>
    <tr>
      <td>
        <p><span class="pls-inflection-row-header">instr</span></p>
      </td>
      <td>
        <div class="pls-inflection-inflected-word"><span class="pls-inflection-inflected-word-suffix">mayā</span></div>
        <div class="pls-inflection-inflected-word"><span class="pls-inflection-inflected-word-suffix">me</span></div>
        </td>
      <td>
        <div class="pls-inflection-inflected-word"><span class="pls-inflection-inflected-word-suffix">amhehi</span></div>
        <div class="pls-inflection-inflected-word"><span class="pls-inflection-inflected-word-suffix">no</span></div>
        </td>
    </tr>
    <tr>
      <td>
        <p><span class="pls-inflection-row-header">dat</span></p>
      </td>
      <td>
        <div class="pls-inflection-inflected-word"><span class="pls-inflection-inflected-word-suffix">mama</span></div>
        <div class="pls-inflection-inflected-word"><span class="pls-inflection-inflected-word-suffix">mamaṃ</span></div>
        <div class="pls-inflection-inflected-word"><span class="pls-inflection-inflected-word-suffix">mayha</span></div>
        <div class="pls-inflection-inflected-word"><span class="pls-inflection-inflected-word-suffix">mayhaṃ</span></div>
        <div class="pls-inflection-inflected-word"><span class="pls-inflection-inflected-word-suffix">me</span></div>
        </td>
      <td>
        <div class="pls-inflection-inflected-word"><span class="pls-inflection-inflected-word-suffix">amhaṃ</span></div>
        <div class="pls-inflection-inflected-word"><span class="pls-inflection-inflected-word-suffix">amhākaṃ</span></div>
        <div class="pls-inflection-inflected-word"><span class="pls-inflection-inflected-word-suffix">no</span></div>
        </td>
    </tr>
    <tr>
      <td>
        <p><span class="pls-inflection-row-header">abl</span></p>
      </td>
      <td>
        <div class="pls-inflection-inflected-word"><span class="pls-inflection-inflected-word-suffix">mayā</span></div>
        </td>
      <td>
        <div class="pls-inflection-inflected-word"><span class="pls-inflection-inflected-word-suffix">amhehi</span></div>
        </td>
    </tr>
    <tr>
      <td>
        <p><span class="pls-inflection-row-header">gen</span></p>
      </td>
      <td>
        <div class="pls-inflection-inflected-word"><span class="pls-inflection-inflected-word-suffix">mama</span></div>
        <div class="pls-inflection-inflected-word"><span class="pls-inflection-inflected-word-suffix">mamaṃ</span></div>
        <div class="pls-inflection-inflected-word"><span class="pls-inflection-inflected-word-suffix">mayha</span></div>
        <div class="pls-inflection-inflected-word"><span class="pls-inflection-inflected-word-suffix">mayhaṃ</span></div>
        <div class="pls-inflection-inflected-word"><span class="pls-inflection-inflected-word-suffix">me</span></div>
        </td>
      <td>
        <div class="pls-inflection-inflected-word"><span class="pls-inflection-inflected-word-suffix">amhaṃ</span></div>
        <div class="pls-inflection-inflected-word"><span class="pls-inflection-inflected-word-suffix">amhākaṃ</span></div>
        <div class="pls-inflection-inflected-word"><span class="pls-inflection-inflected-word-suffix">no</span></div>
        </td>
    </tr>
    <tr>
      <td>
        <p><span class="pls-inflection-row-header">loc</span></p>
      </td>
      <td>
        <div class="pls-inflection-inflected-word"><span class="pls-inflection-inflected-word-suffix">mayi</span></div>
        </td>
      <td>
        <div class="pls-inflection-inflected-word"><span class="pls-inflection-inflected-word-suffix">amhesu</span></div>
        </td>
    </tr>
    <tr>
      <td>
        <p><span class="pls-inflection-row-header">voc</span></p>
      </td>
      <td>
        </td>
      <td>
        </td>
    </tr>
    <tr>
      <td><span class="pls-inflection-row-header">in comps</span></td>
      <td colspan="2">
        </td>
    </tr>
  </tbody>
</table>

  <footer class="pls-inflection-footer"><a class="pls-inflection-feedback-link" target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSdqnYM0_5VeWzkFBPzyxaLqUfKWgNjI8STCpdrx4vX3hetyxw/viewform"><strong>spot a mistake? something missing? fix it here!</strong></a></footer>
</div>

