test_app/src/snapshots/test_app__tests__inflection_tests__declension_4_pron_2nd.snap
---
source: test_app/src/main.rs
expression: html

---
<div class="pls-inflection-root">
  <header class="pls-inflection-header"><summary class="pls-inflection-summary">taṃ 3 &ndash; "tvaṃ pron 2nd" (like )</summary></header>
<table class="pls-inflection-table pls-inflection-type-conjugation">
  <thead>
    <tr>
      <td><span class="pls-inflection-table-title">tvaṃ_pron_2nd</span></td>
      <td><span class="pls-inflection-col-header">2nd sg</span></td>
      <td><span class="pls-inflection-col-header">2nd pl</span></td>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        <p><span class="pls-inflection-row-header">nom</span></p>
      </td>
      <td>
        <div class="pls-inflection-inflected-word"><span class="pls-inflection-inflected-word-suffix">tuvaṃ</span></div>
        <div class="pls-inflection-inflected-word"><span class="pls-inflection-inflected-word-suffix">tvaṃ</span></div>
        </td>
      <td>
        <div class="pls-inflection-inflected-word"><span class="pls-inflection-inflected-word-suffix">tumhe</span></div>
        </td>
    </tr>
    <tr>
      <td>
        <p><span class="pls-inflection-row-header">acc</span></p>
      </td>
      <td>
        <div class="pls-inflection-inflected-word"><span class="pls-inflection-inflected-word-suffix">tavaṃ</span></div>
        <div class="pls-inflection-inflected-word"><span class="pls-inflection-inflected-word-suffix">taṃ</span></div>
        <div class="pls-inflection-inflected-word"><span class="pls-inflection-inflected-word-suffix">tuvaṃ</span></div>
        </td>
      <td>
        <div class="pls-inflection-inflected-word"><span class="pls-inflection-inflected-word-suffix">tumhākaṃ</span></div>
        <div class="pls-inflection-inflected-word"><span class="pls-inflection-inflected-word-suffix">tumhe</span></div>
        <div class="pls-inflection-inflected-word"><span class="pls-inflection-inflected-word-suffix">vo</span></div>
        </td>
    </tr>
    <tr>
      <td>
        <p><span class="pls-inflection-row-header">instr</span></p>
      </td>
      <td>
        <div class="pls-inflection-inflected-word"><span class="pls-inflection-inflected-word-suffix">tayā</span></div>
        <div class="pls-inflection-inflected-word"><span class="pls-inflection-inflected-word-suffix">te</span></div>
        </td>
      <td>
        <div class="pls-inflection-inflected-word"><span class="pls-inflection-inflected-word-suffix">tumhehi</span></div>
        <div class="pls-inflection-inflected-word"><span class="pls-inflection-inflected-word-suffix">vo</span></div>
        </td>
    </tr>
    <tr>
      <td>
        <p><span class="pls-inflection-row-header">dat</span></p>
      </td>
      <td>
        <div class="pls-inflection-inflected-word"><span class="pls-inflection-inflected-word-suffix">tava</span></div>
        <div class="pls-inflection-inflected-word"><span class="pls-inflection-inflected-word-suffix">tuyhaṃ</span></div>
        <div class="pls-inflection-inflected-word"><span class="pls-inflection-inflected-word-suffix">te</span></div>
        </td>
      <td>
        <div class="pls-inflection-inflected-word"><span class="pls-inflection-inflected-word-suffix">tumhaṃ</span></div>
        <div class="pls-inflection-inflected-word"><span class="pls-inflection-inflected-word-suffix">tumhākaṃ</span></div>
        <div class="pls-inflection-inflected-word"><span class="pls-inflection-inflected-word-suffix">vo</span></div>
        </td>
    </tr>
    <tr>
      <td>
        <p><span class="pls-inflection-row-header">abl</span></p>
      </td>
      <td>
        <div class="pls-inflection-inflected-word"><span class="pls-inflection-inflected-word-suffix">tayā</span></div>
        <div class="pls-inflection-inflected-word"><span class="pls-inflection-inflected-word-suffix">tvāya</span></div>
        </td>
      <td>
        <div class="pls-inflection-inflected-word"><span class="pls-inflection-inflected-word-suffix">tumhehi</span></div>
        </td>
    </tr>
    <tr>
      <td>
        <p><span class="pls-inflection-row-header">gen</span></p>
      </td>
      <td>
        <div class="pls-inflection-inflected-word"><span class="pls-inflection-inflected-word-suffix">tava</span></div>
        <div class="pls-inflection-inflected-word"><span class="pls-inflection-inflected-word-suffix">tuyhaṃ</span></div>
        <div class="pls-inflection-inflected-word"><span class="pls-inflection-inflected-word-suffix">te</span></div>
        </td>
      <td>
        <div class="pls-inflection-inflected-word"><span class="pls-inflection-inflected-word-suffix">tumhaṃ</span></div>
        <div class="pls-inflection-inflected-word"><span class="pls-inflection-inflected-word-suffix">tumhākaṃ</span></div>
        <div class="pls-inflection-inflected-word"><span class="pls-inflection-inflected-word-suffix">vo</span></div>
        </td>
    </tr>
    <tr>
      <td>
        <p><span class="pls-inflection-row-header">loc</span></p>
      </td>
      <td>
        <div class="pls-inflection-inflected-word"><span class="pls-inflection-inflected-word-suffix">tayi</span></div>
        <div class="pls-inflection-inflected-word"><span class="pls-inflection-inflected-word-suffix">tvāyi</span></div>
        </td>
      <td>
        <div class="pls-inflection-inflected-word"><span class="pls-inflection-inflected-word-suffix">tumhesu</span></div>
        </td>
    </tr>
    <tr>
      <td>
        <p><span class="pls-inflection-row-header">voc</span></p>
      </td>
      <td>
        </td>
      <td>
        </td>
    </tr>
    <tr>
      <td><span class="pls-inflection-row-header">in comps</span></td>
      <td colspan="2">
        </td>
    </tr>
  </tbody>
</table>

  <footer class="pls-inflection-footer"><a class="pls-inflection-feedback-link" target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSdqnYM0_5VeWzkFBPzyxaLqUfKWgNjI8STCpdrx4vX3hetyxw/viewform"><strong>spot a mistake? something missing? fix it here!</strong></a></footer>
</div>

